Update project files

--- a/.allstar/binary_artifacts.yaml
+++ b/.allstar/binary_artifacts.yaml
@@ -2,3 +2,5 @@
 ignorePaths:
 - java-hello/.mvn/wrapper/maven-wrapper.jar
 - java-spring-actuator/.mvn/wrapper/maven-wrapper.jar
+
+# Update: 2025-10-18
